# RK

./: CMakeLists.txt
.github/workflows/: build.yml  release.yml
src/: HasMoneyState.cpp  HasMoneyState.hpp  NoMoneyState.cpp  NoMoneyState.hpp  SoldState.cpp  SoldState.hpp  State.hpp  VendingMachine.cpp  VendingMachine.hpp  main.cpp
tests/: test_state.cpp
